trying to wire up email functionality

--- a/DH_BugTracker/Views/Account/NewRegister.cshtml
+++ b/DH_BugTracker/Views/Account/NewRegister.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    ViewBag.Title = "Reset password confirmation";
+﻿
+@{
+    ViewBag.Title = "New User Registration";
 }
 
 <div class="container">
@@ -10,10 +11,8 @@
     </div>
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto d-flex justify-content-center">
-            <p>
-                Your password has been reset. Please @Html.ActionLink("click here",
-"Login", "Account", routeValues: null, htmlAttributes:
-new { id = "loginLink" }) to Log In.
+            Thank you for registering. Be on the lookout for a confirmation email,
+            and when you receive the email click the link and log in!
         </div>
     </div>
 </div>
