--- a/DH_BugTracker/Views/Account/ConfirmEmail.cshtml
+++ b/DH_BugTracker/Views/Account/ConfirmEmail.cshtml
@@ -2,9 +2,20 @@
     ViewBag.Title = "Confirm Email";
 }
 
-<h2>@ViewBag.Title.</h2>
-<div>
-    <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
+<div class="container">
+    <div class="row">
+        <div class="col d-flex justify-content-center">
+            <p><h2>@ViewBag.Title</h2></p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto d-flex justify-content-center">
+            <p>
+                Thank you for confirming your email. Please
+                @Html.ActionLink("Click Here", "Login", "Account",
+                routeValues: null, htmlAttributes: new { id = "loginLink" })
+                to Log In.
+            </p>
+        </div>
+    </div>
 </div>
