--- a/DH_BugTracker/Views/Account/Login.cshtml
+++ b/DH_BugTracker/Views/Account/Login.cshtml
@@ -61,7 +61,7 @@
                     </div>*@
                     <div class="text-center p-t-45 p-b-4">
                         <span class="txt1">
-                            Forgot
+                            Forgot your 
                         </span>
 
                         <a class="txt2 hov1">
