--- a/DH_BugTracker/Views/Admin/ManageRoles.cshtml
+++ b/DH_BugTracker/Views/Admin/ManageRoles.cshtml
@@ -4,15 +4,13 @@
 }
 
 <style>
-    .allWide{
-        width:100%;
-        max-width:100%;
+    .allWide {
+        width: 100%;
+        max-width: 100%;
     }
-
 </style>
 
 <h2>ManageRoles</h2>
-
 
 <div class="row">
     <div class="col-6">
@@ -21,12 +19,12 @@
             @Html.AntiForgeryToken()
             <div class="row">
                 <div class="col">
-                    @Html.ListBox("UserIds", null, new { @class="allWide"})
+                    @Html.ListBox("UserIds", null, new { @class = "allWide" })
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    @Html.DropDownList("Role", null, "--Select Role--", new { @class="allWide"})
+                    @Html.DropDownList("Role", null, "--Select Role--", new { @class = "allWide" })
                 </div>
             </div>
             <div class="row">
@@ -37,7 +35,8 @@
         }
     </div>
     <div class="col-6">
-        <table class="table">
+        <table class="table" id="DTJQ3">
+        <thead>
             <tr>
                 <th>
                     @Html.DisplayName("User Name")
@@ -47,7 +46,9 @@
                 </th>
                 <th></th>
             </tr>
-            @foreach(var user in Model)
+        </thead>
+        <tbody>
+            @foreach (var user in Model)
             {
                 <tr>
                     <td>
@@ -58,6 +59,13 @@
                     </td>
                 </tr>
             }
+        </tbody>
         </table>
     </div>
 </div>
+
+@section scripts{
+    <script>
+        $('#DTJQ3').DataTable();
+    </script>
+}
