--- a/DH_BugTracker/Views/Shared/_Layout.cshtml
+++ b/DH_BugTracker/Views/Shared/_Layout.cshtml
@@ -95,7 +95,7 @@
             </nav>
             <!-- End Navbar -->
             <div class="content">
-                <div class="container body-content">
+                <div class="container-fluid body-content">
                     @RenderBody()
 
                 </div>
