--- a/DH_BugTracker/Views/Admin/ManageRoles.cshtml
+++ b/DH_BugTracker/Views/Admin/ManageRoles.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<DH_BugTracker.Models.ManageRolesViewModel>
 @{
-    ViewBag.Title = "ManageRoles";
+    ViewBag.Title = "Manage Roles";
 }
 
 <style>
@@ -10,7 +10,7 @@
     }
 </style>
 
-<h2>ManageRoles</h2>
+<h2>@ViewBag.Title</h2>
 
 <div class="row">
     <div class="col-6">
@@ -39,18 +39,23 @@
         <thead>
             <tr>
                 <th>
+                    @Html.DisplayName("Email")
+                </th>
+                <th>
                     @Html.DisplayName("User Name")
                 </th>
                 <th>
                     @Html.DisplayName("Role")
                 </th>
-                <th></th>
             </tr>
         </thead>
         <tbody>
             @foreach (var user in Model)
             {
                 <tr>
+                    <td>
+                        @Html.DisplayFor(model => user.Email)
+                    </td>
                     <td>
                         @Html.DisplayFor(model => user.UserName)
                     </td>
