--- a/DH_BugTracker/Views/Shared/_Layout.cshtml
+++ b/DH_BugTracker/Views/Shared/_Layout.cshtml
@@ -58,6 +58,7 @@
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li>@Html.ActionLink("Edit User Info", "EditUser", "Manage")</li>
+                        <li>@Html.ActionLink("Your Tickets", "Index", "Ticket")</li>
                     }
                 </ul>
             </div>
@@ -97,8 +98,9 @@
             <!-- End Navbar -->
             <div class="content">
                 <div class="container-fluid body-content">
-                    @RenderBody()
-
+                    <div class="col">
+                        @RenderBody()
+                    </div>
                 </div>
                 <!-- your content here -->
             </div>
