--- a/DH_BugTracker/Views/Admin/ManageProjects.cshtml
+++ b/DH_BugTracker/Views/Admin/ManageProjects.cshtml
@@ -29,7 +29,7 @@
                         <br />
                         <br />
                         <br />
-                        <button type="submit" class="btn btn-primary btn-lg">Assign</button>
+                        <button type="submit" class="btn allbtn btn-lg">Assign</button>
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            @Html.DropDownList("AdminId", null, "--Select--", new { @class = "form-control", style = "background-color: white;border:solid 1px grey" })
+                            @Html.DropDownList("AdminId", null, "--Select One--", new { @class = "form-control", style = "background-color: white;border:solid 1px grey" })
                         </div>
                     </div>
                     <div class="row">
@@ -53,7 +53,7 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            @Html.DropDownList("ProjectManagerId", null, "--Select--", new { @class = "form-control", style = "background-color: white;border:solid 1px grey" })
+                            @Html.DropDownList("ProjectManagerId", null, "--Select One--", new { @class = "form-control", style = "background-color: white;border:solid 1px grey" })
                         </div>
                     </div>
                 }
