--- a/DH_BugTracker/Views/Admin/ManageRoles.cshtml
+++ b/DH_BugTracker/Views/Admin/ManageRoles.cshtml
@@ -29,7 +29,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <button type="submit" class="btn btn-primary allWide">Submit</button>
+                    <button type="submit" class="btn allbtn allWide">Submit</button>
                 </div>
             </div>
         }
