--- a/DH_BugTracker/Views/Shared/_Layout.cshtml
+++ b/DH_BugTracker/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using DH_BugTracker.Helpers
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -32,20 +33,24 @@
 
                 Tip 2: you can also add an image using data-image tag
             -->
-            <div class="logo">
-                <a href="//dhportfolio.azurewebsites.net" class="simple-text logo-mini">
-                    Portfolio
-                </a>
-                <a href="//dhblog.azurewebsites.net" class="simple-text logo-normal">
-                    My Blog
-                </a>
+            <div class="row no-gutters">
+                <div class="col-5" style="border:1px solid #E5E5E5; background-image: url('@User.Identity.GetAvatarPath()'); background-size:100% 100%">
+                </div>
+                <div class="col logo">
+                    <span class="simple-text">
+                        Welcome,
+                    </span>
+                    <h6 class="text-center no-gutters" style="line-height:32px">
+                        @User.Identity.GetDisplayName()
+                    </h6>
+                </div>
             </div>
             <div class="sidebar-wrapper">
                 <ul class="nav">
                     <li class="nav-item active  ">
-                        <a class="nav-link" href="#0">
+                        <a class="nav-link" href="~/Home/Dashboard">
                             <i class="material-icons">dashboard</i>
-                            <p>Dashboard</p>
+                            <p><b>Dashboard Home</b></p>
                         </a>
                     </li>
                     <!-- your sidebar here -->
@@ -68,7 +73,7 @@
         </div>
         <div class="main-panel">
             <!-- Navbar -->
-            <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
+            <nav class="navbar navbar-expand-lg navbar-absolute fixed-top" style="background-color:white; border:1px #E5E5E5 solid">
                 <div class="container-fluid">
                     <div class="navbar-wrapper">
                         <a class="navbar-brand" href="#pablo">Dashboard</a>
@@ -107,6 +112,9 @@
             </div>
         </div>
     </div>
+
+
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     <script src="~/Scripts/jquery.dataTables.min.js"></script>
