--- a/DH_BugTracker/Views/Manage/EditUser.cshtml
+++ b/DH_BugTracker/Views/Manage/EditUser.cshtml
@@ -11,6 +11,8 @@
     {
         @Html.AntiForgeryToken()
         @Html.HiddenFor(model => model.Id)
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+
         <div class="form-horizontal">
             <h4>User Information</h4>
             <hr />
@@ -44,12 +46,6 @@
             </div>
         </div>
 
-        @*<div class="form-group">
-                @Html.Label("Upload Avatar", new { @class = "control-label col-md-3" })
-                <div class="col-md-6">
-                    @Html.TextBox("Avatar", null, new { @type = "file", @class = "form-control" })
-                </div>
-            </div>*@
         <div>
             <br />
             <h5 style="padding-left:20px">Upload Avatar</h5>
